--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="#home"><img src="images/HOME.png" alt="HOME"></a></li>
                 <li><a href="#about"><img src="images/ABOUT.png" alt="ABOUT"></a></li>
-                <li><a href="#portfolio"><img src="images/PROJECTS.png" alt="PROJECTS"></a></li>
+                <li><a href=portfolio.html><img src="images/PROJECTS.png" alt="PROJECTS"></a></li>
                 <li><a href="#footer-contact" ><img src="images/CONTACT.png" alt="CONTACT"></a></li>
             </ul>
         </nav>
