--- a/portfolio.html
+++ b/portfolio.html
@@ -89,7 +89,7 @@
             </div>
             <div class="grid-item" style="background-image: url('images/wip.png');">
                 <p class="full-text"></p>
-                <h1>More Coming Soon!</h1><p class="summary"></p>
+                <h1>More Coming Soon!</h1>
                 </div>
                 
         </div>
