--- a/portfolio.html
+++ b/portfolio.html
@@ -13,11 +13,11 @@
 
     <header>
         <nav class="navbar">
-            <img src="images/logo.png" alt="Logo" class="navbar-logo">
+            <a href="index.html#home"><img src="images/logo.png" alt="Logo" class="navbar-logo"></a>
             <ul>
-                <li><a href="index.html#home"><img src="images/HOME.png" alt="HOME"></a></li>
                 <li><a href="index.html#about"><img src="images/ABOUT.png" alt="ABOUT"></a></li>
-                <li><a href=portfolio.html><img src="images/PROJECTS.png" alt="PROJECTS"></a></li>
+                <li><a href=portfolio.html><img src="images/PROJECTS.png" alt="PROJECTS/WORKS"></a></li>
+                <li><a href="docu/L.ResumeM.pdf"  download="Resume"><img src="images/RESUME.png" alt="RESUME"></a></li>
                 <li><a href="#footer-contact" ><img src="images/CONTACT.png" alt="CONTACT"></a></li>
             </ul>
         </nav>
@@ -26,8 +26,9 @@
     <section id="head" class="intro-section">
         <div class="intro-container">
             <h1>My Projects</h1>
-            <!-- <p>My interests, deep dives, and research.</p> -->
+            
         </div>
+        <p>My interests, deep dives, and research. Click on the tabs to learn more/download some of my papers!</p>
     </section>
 
     <section id="projects">
@@ -96,15 +97,13 @@
     </section>
     
     <footer id="footer-contact" class="footer-contact">
-        <h1>GET IN TOUCH:</h1>
+        <!-- <h1>GET IN TOUCH:</h1> -->
         <div class="contact-info">
-            <p style="display: flex; align-items: center;">
-                <i class="fa fa-envelope" style="font-size:36px"></i>&nbsp&nbsp<a href="mailto:wlillyngo@gmail.com">wlillyngo@gmail.com</a> &emsp;&emsp;&emsp;&emsp;&emsp;
-                <i class="fa fa-phone" style="font-size:36px"></i>&nbsp&nbsp <a href="tel:+4847142954">(484) 714-2954</a>
-            </p>
-            <p style="display: flex; align-items: center;">
-                <i class="fa fa-linkedin-square" style="font-size:5vh"></i> &nbsp&nbsp <a href="https://www.linkedin.com/in/lillyn-g" target="_blank"> LinkedIn</a>
-                &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<i class="fa fa-github" style="font-size:36px"></i>  &nbsp&nbsp  <a href="https://github.com/ngosterly" target="_blank">GitHub</a>
+            <p>
+                <i class="fa fa-envelope" style="font-size:36px"></i> &nbsp <a href="mailto:wlillyngo@gmail.com">Email</a> &emsp;&emsp;&emsp;&emsp;&emsp;
+                <!-- <i class="fa fa-phone" style="font-size:36px"></i>&nbsp&nbsp <a href="tel:+4847142954"></a>&emsp;&emsp;&emsp;&emsp;&emsp; -->
+                <i class="fa fa-linkedin-square" style="font-size:5vh"></i> &nbsp <a href="https://www.linkedin.com/in/lillyn-g" target="_blank"> LinkedIn</a>
+                &emsp;&emsp;&emsp;&emsp;&emsp;<i class="fa fa-github" style="font-size:36px"></i>  &nbsp  <a href="https://github.com/ngosterly" target="_blank">GitHub</a>
             </p>
         </div>
     </footer>
