--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="styles_main.css">
     <link rel="stylesheet" href="abt_ct_me.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
 </head>
 <body style="background-color: #f3f3f3";>
 
@@ -16,7 +19,7 @@
             <ul>
                 <li><a href="#about"><img src="images/ABOUT.png" alt="ABOUT"></a></li>
                 <li><a href=portfolio.html><img src="images/PROJECTS.png" alt="PROJECTS/WORKS"></a></li>
-                <li><a href="docu/L.ResumeM.pdf" download="Resume" class="download-link"><img src="images/RESUME.png" alt="RESUME"></a></li>
+                <li><a href="docu/L.ResumeM.pdf" target="_blank" class="download-link"><img src="images/RESUME.png" alt="RESUME"></a></li>
                 <li><a href="#footer-contact" ><img src="images/CONTACT.png" alt="CONTACT"></a></li>
             </ul>
         </nav>
@@ -32,7 +35,8 @@
     </section>
 
     <section id="about" class="about-section">
-        <div class="fade-in-section">
+    <div  class="cool-font">
+            <div class="fade-in-section">
             <h1>ABOUT ME:</h1>
         </div>
         <div class="about-content">
@@ -52,6 +56,8 @@
             </div>
             <img src="images/me2.jpg" alt="me" class="my-face fade-in-image" style=" border-radius: 25px;">
         </div>
+     </div>
+        
     </section>
 
     <!-- <section id="quotes" class="quotes-section">
