--- a/portfolio.html
+++ b/portfolio.html
@@ -39,11 +39,11 @@
             <div class="grid-container">
             <div class="grid-item" style="background-image: url('images/heart.png');">
                 <div class="c-container">
-                    <p class="full-text">This project implements a Naïve Bayes machine learning model to predict the likelihood of heart disease, 
+                    <p class="full-text">This project implemented a Naïve Bayes machine learning model to predict the likelihood of heart disease, 
                     using a dataset from the UCI Machine Learning Repository. It utilized CategoricalNB for categorical features and 
                     Kernel Density Estimation (KDE) for continuous data, combining both models to enhance prediction accuracy. 
                     The goal was to optimize both computational efficiency and classification performance while addressing the challenges
-                    of working with real-world healthcare data in an undergraduate collaborative setting. The results demonstrated 
+                    of working with real-world healthcare data in a collaborative setting. The results demonstrated 
                     the effectiveness of the hybrid approach, leveraging the strengths of Naïve Bayes for handling rare categories 
                     and KDE for continuous features, resulting in a robust and practical tool for heart disease prediction.</p>
                 <h1>Predicting Heart Disease Probability Using Naïve Bayes ML</h1></div>
@@ -70,10 +70,10 @@
                 <div class="c-container">
                     <p class="full-text">This group research focused on exploring space-time diagrams of infinite one-dimensional 
                         cellular automata generated using modular alphabets and two-seed (varied) initial states. The study 
-                        investigates how changing initial states affects the distribution and density of identity and 
-                        non-identity elements within these diagrams. Additionally, it examines how the growth rate dimension, 
+                        investigated how changing initial states affects the distribution and density of identity and 
+                        non-identity elements within these diagrams. Additionally, it examined how the growth rate dimension, 
                         a measure of self-similar growth, varies with different parameters in cellular automata using 
-                        alphabets defined by powers of primes. The goal was to understand the structural patterns and 
+                        alphabets defined by powers of primes. The overall goal was to understand the structural patterns and 
                         fractal-like behavior in these systems. 
                     /p>
                 <h1> Growth Rate Dimensions for Non-Zero Elements in Cellular Automata</h1></div>
@@ -83,10 +83,10 @@
             </div>
             <div class="grid-item" style="background-image: url('images/gender.jpg');">
                 <div class="c-container">
-                    <p class="full-text">This study examines gender biases in pronoun resolution by three popular Large 
+                    <p class="full-text">This study examined gender biases in pronoun resolution by three popular Large 
                         Language Models (LLMs) — ChatGPT-3.5, ChatGPT-4.0, and Google's Gemini — by analyzing their default and 
                         alternative interpretations of ambiguous pronouns in sentences featuring various occupations and activities. 
-                        Using various sentence prompts with multiple permutations (prompt engineering), the research evaluates the 
+                        Using various sentence prompts with multiple permutations (prompt engineering), the research evaluated the 
                         models' tendencies to associate specific pronouns with certain roles, revealing potential biases. 
                         The findings highlighted the ethical challenges of AI systems and conveyed the importance of equitable and 
                         accountable development to address gender bias in machine learning.
@@ -96,12 +96,12 @@
             </div>
             <div class="grid-item" style="background-image: url('images/fatigue.png');">
                 <div class="c-container">
-                    <p class="full-text">This literature study examines the potential of Artificial Intelligence (AI) to address 
-                        work-related fatigue in the healthcare industry, an issue exacerbated by the pandemic and linked to 
+                    <p class="full-text">This literature study examined the potential of Artificial Intelligence (AI) to address 
+                        work-related fatigue in the healthcare industry, an issue exemplified by the pandemic and linked to 
                         increased errors, patient dissatisfaction, and high turnover rates. Drawing insights from AI's 
-                        transformative applications in sectors like transportation and education, the study explores how AI can 
+                        transformative applications in sectors like transportation and education, the study explored how AI can 
                         be integrated into healthcare to monitor staff stress levels, predict burnout, and enhance diagnostic 
-                        accuracy for improved patient outcomes. It emphasizes the importance of secure implementation, 
+                        accuracy for improved patient outcomes. It emphasized the importance of secure implementation, 
                         highlighting ethical considerations, data privacy, accountability, and adherence to regulatory 
                         frameworks as critical factors for success.
                     </p>
